# dirgo

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  Makefile  README.md  cache.go  cache_test.go  entry.go  go.mod  keys.go  main.go  model.go  pyproject.toml  render.go  render_test.go  scanner.go  scanner_test.go  styles.go  utils.go  utils_test.go
.archive/: contributing-and-release.md
.github/workflows/: ci.yml  pypi.yml  release.yml
dirgo_python/: __init__.py  _cli.py
docs/: dirgo-release-notes.md  release-and-homebrew.md
